[gd_scene load_steps=7 format=2]

[ext_resource path="res://addons/dialogue_nodes/editor.gd" type="Script" id=1]
[ext_resource path="res://addons/dialogue_nodes/graph.gd" type="Script" id=2]
[ext_resource path="res://addons/dialogue_nodes/icons/Back.svg" type="Texture" id=3]
[ext_resource path="res://addons/dialogue_nodes/icons/Forward.svg" type="Texture" id=4]
[ext_resource path="res://addons/dialogue_nodes/objects/Dialogue.tscn" type="PackedScene" id=5]
[ext_resource path="res://addons/dialogue_nodes/editor/workspace.gd" type="Script" id=7]

[node name="NodeEditor" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 300 )
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ToolBar" type="HBoxContainer" parent="Main"]
margin_right = 1024.0
margin_bottom = 22.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileMenu" type="MenuButton" parent="Main/ToolBar"]
margin_right = 35.0
margin_bottom = 22.0
keep_pressed_outside = true
text = "File"
items = [ "New Tree", null, 0, false, false, 0, 0, null, "", false, "Save Tree", null, 0, false, false, 1, 0, null, "", false, "Open Tree", null, 0, false, false, 2, 0, null, "", false, "Close Tree", null, 0, false, false, 3, 0, null, "", false ]
switch_on_hover = true

[node name="AddMenu" type="MenuButton" parent="Main/ToolBar"]
margin_left = 39.0
margin_right = 114.0
margin_bottom = 22.0
keep_pressed_outside = true
text = "Add Node"
items = [ "StartNode", null, 0, false, false, 0, 0, null, "", false, "DialogueNode", null, 0, false, false, 1, 0, null, "", false, "CommentNode", null, 0, false, false, 2, 0, null, "", false ]
switch_on_hover = true

[node name="RunMenu" type="MenuButton" parent="Main/ToolBar"]
margin_left = 118.0
margin_right = 154.0
margin_bottom = 22.0
keep_pressed_outside = true
text = "Run"
items = [ "Run this tree", null, 0, false, false, 0, 0, null, "", false, "Run from file", null, 0, false, false, 1, 0, null, "", false ]
switch_on_hover = true

[node name="Workspace" type="HSplitContainer" parent="Main"]
margin_top = 26.0
margin_right = 1024.0
margin_bottom = 574.0
size_flags_vertical = 3
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}
nodeScenes = [ "res://addons/dialogue_nodes/nodes/StartNode.tscn", "res://addons/dialogue_nodes/nodes/DialogueNode.tscn", "res://addons/dialogue_nodes/nodes/CommentNode.tscn" ]

[node name="SidePanel" type="Panel" parent="Main/Workspace"]
visible = false
margin_right = 200.0
margin_bottom = 548.0
rect_min_size = Vector2( 200, 0 )

[node name="Label" type="Label" parent="Main/Workspace/SidePanel"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "TODO : show multiple open files."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Graph" type="GraphEdit" parent="Main/Workspace"]
margin_right = 1024.0
margin_bottom = 548.0
rect_min_size = Vector2( 400, 0 )
size_flags_vertical = 3
right_disconnects = true
scroll_offset = Vector2( -208, -2 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopupMenu" type="PopupMenu" parent="Main/Workspace/Graph"]
margin_right = 16.0
margin_bottom = 16.0
items = [ "StartNode", null, 0, false, false, 0, 0, null, "", false, "DialogueNode", null, 0, false, false, 1, 0, null, "", false, "CommentNode", null, 0, false, false, 2, 0, null, "", false ]
allow_search = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Statusbar" type="HBoxContainer" parent="Main"]
margin_top = 578.0
margin_right = 1024.0
margin_bottom = 600.0

[node name="PanelToggle" type="TextureButton" parent="Main/Statusbar"]
margin_right = 30.0
margin_bottom = 22.0
rect_min_size = Vector2( 30, 20 )
toggle_mode = true
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 3 )
expand = true
stretch_mode = 3

[node name="FileName" type="Label" parent="Main/Statusbar"]
margin_left = 34.0
margin_right = 134.0
margin_bottom = 22.0
rect_min_size = Vector2( 100, 0 )

[node name="SaveDialog" type="FileDialog" parent="."]
margin_left = 200.0
margin_top = 200.0
margin_right = 700.0
margin_bottom = 600.0
rect_min_size = Vector2( 400, 300 )
rect_pivot_offset = Vector2( 200, 150 )
window_title = "Save Dialogue Tree"
resizable = true
mode_overrides_title = false
access = 2
filters = PoolStringArray( "*.json; Dialogue JSON File" )
current_dir = "/Godot/GodotProjects/DialogueNodes"
current_path = "/Godot/GodotProjects/DialogueNodes/"

[node name="LoadDemoDialog" type="FileDialog" parent="."]
margin_left = 200.0
margin_top = 200.0
margin_right = 700.0
margin_bottom = 600.0
rect_min_size = Vector2( 400, 300 )
rect_pivot_offset = Vector2( 200, 150 )
window_title = "Open File to Run"
resizable = true
mode_overrides_title = false
mode = 0
access = 2
filters = PoolStringArray( "*.json; Dialogue JSON File" )
current_dir = "/Godot/GodotProjects/DialogueNodes"
current_path = "/Godot/GodotProjects/DialogueNodes/"

[node name="LoadTreeDialog" type="FileDialog" parent="."]
margin_left = 200.0
margin_top = 200.0
margin_right = 700.0
margin_bottom = 600.0
rect_min_size = Vector2( 400, 300 )
rect_pivot_offset = Vector2( 200, 150 )
window_title = "Open Dialogue Tree"
resizable = true
mode_overrides_title = false
mode = 0
access = 2
filters = PoolStringArray( "*.json; Dialogue JSON File" )
current_dir = "/Godot/GodotProjects/DialogueNodes"
current_path = "/Godot/GodotProjects/DialogueNodes/"

[node name="LoadAlertDialog" type="AcceptDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -90.0
margin_top = -34.0
margin_right = 90.0
margin_bottom = 34.0
dialog_text = "File loaded successfully."

[node name="SaveAlertDialog" type="AcceptDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.5
margin_top = -34.0
margin_right = 125.5
margin_bottom = 34.0
dialog_text = "Tree is incomplete. Unable to save."

[node name="Dialogue" parent="." instance=ExtResource( 5 )]

[connection signal="node_added" from="Main/Workspace" to="." method="_on_node_added"]
[connection signal="node_deleted" from="Main/Workspace" to="." method="_on_node_deleted"]
[connection signal="connection_request" from="Main/Workspace/Graph" to="Main/Workspace" method="_on_connection_request"]
[connection signal="connection_to_empty" from="Main/Workspace/Graph" to="Main/Workspace" method="_on_connection_to_empty"]
[connection signal="delete_nodes_request" from="Main/Workspace/Graph" to="Main/Workspace" method="_on_nodes_delete"]
[connection signal="disconnection_request" from="Main/Workspace/Graph" to="Main/Workspace" method="_on_disconnection_request"]
[connection signal="duplicate_nodes_request" from="Main/Workspace/Graph" to="Main/Workspace" method="_on_nodes_duplicated"]
[connection signal="popup_request" from="Main/Workspace/Graph" to="Main/Workspace" method="show_menu"]
[connection signal="id_pressed" from="Main/Workspace/Graph/PopupMenu" to="Main/Workspace" method="add_node"]
[connection signal="pressed" from="Main/Statusbar/PanelToggle" to="." method="toggle_side_panel"]
